removed the form from the initial page

--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -6,27 +6,17 @@
   <title>Project Manager Organizer</title>
 </head>
       <body>
-         <div>
+          <div>
             <h3>Welocme to The Project Manager's Organizer</h3>
-            <p>Sign Up or Login to start organizing your Projects!!!</p></div>
-            <form action="/managers" method="post">
-            <div>
-            <label for="name">Name: </label>
-              <input type="text", name="manager[name]", id="name">
-            </div>
-            <div>
-            <label for="email">Email: </label>
-              <input type="text", name="manager[email]", id="email">
-            </div>  
-            <div>
-            <label for="password">Password: </label>
-              <input type="text", name="manager[password]", id="password">
-            </div>
-              <input type="submit" value="Create Account">
-            </form>
+            <p>Sign Up or Login to start organizing your Projects!!!</p>
+          </div>
+           
               <nav>
                 <ul>
                   <li><a href="/login">Login</a></li>
+                </ul>
+                <ul>
+                  <li><a href="/sign_up">Sign Up</a></li>
                 </ul>
               </nav>
       </body>
