changed the projects default page

--- a/app/views/projects/index.erb
+++ b/app/views/projects/index.erb
@@ -1,9 +1,17 @@
 <ul>
 
     <% @projects.each do |project| %>
-        <li> <h4>Project Name:</h4> <%= project.name %> </li>
-        <li> <h4>Project Due Date:</h4> <%= project.due_date %> </li>
-        <li> <h4>Project Start Date:</h4> <%= project.start_date %> </li>
+   
+        <li> <a href="/projects/<%=project.id%>"><%= project.name %> </a></li>
         <% end %>
 
 </ul>
+
+<form action="/projects" method="post">
+    <input type="hidden" name="_method" value="patch">
+    <input type="submit" value="Edit Projects">
+</form>
+
+<form action="/projects/new" method="post">
+    <input type="submit" value="Create Project">
+</form>
