--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,9 +9,9 @@
     <div class="">
       <h4>current_manager: <%= current_manager ? current_manager.name : "no one logged in" %></h4>
     </div>
-  <nav>
+<nav>
     <ul>
-      <% if logged_in? %>
+    <% if logged_in? %>
         <li><form action="/projects" method="get">
             <input type="submit" value="Home">
         </form></li>
@@ -24,11 +24,17 @@
             <input type="submit" value="Update Account">
         </form></li>
 
-      <% else %>
+        <li><form action="/manager" method="post">
+            <input type="hidden" name="_method" value="delete">
+            <input type="submit" value="Remove Account">
+        </form></li>
+
+    <% else %>
         <li><a href="/login">Login</a></li>
         <li><a href="/signup">Sign up</a></li>
-
-      <% end %>
+    <% end %>
+</nav>
+    
     <%= yield %>
 </body>
 </html>
