added closing div tag

--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -9,6 +9,6 @@
           <div>
             <h3>Welocme to The Project Manager's Organizer</h3>
             <p>Sign Up or Login to start organizing your Projects!!!</p>
-       
+          </div>
       </body>
 </html>
