--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Manager Organizer</title>
+    
 </head>
 <body>
     <div class="">
@@ -20,9 +21,10 @@
             <input type="submit" name="" value="Log Out">
         </form></li>
 
-        <li><form class="" action="/manager/edit" method="post">
-            <input type="submit" value="Update Account">
-        </form></li>
+        <li>
+            <a href="/managers/<%= current_manager.id %>/edit">Update Account</a>
+            
+        </li>
 
         <li><form action="/manager" method="post">
             <input type="hidden" name="_method" value="delete">
