--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,7 +13,7 @@
 
   /* --- Welcome Page Styles --- */
   body {
-    background-color: lightblue;
+    background-color: orange;
     color: #333;
     font-family: Sans-Serif;
     line-height: 18px;
@@ -112,4 +112,7 @@
     font-size: 18px;
     line-height: 24px;
   }
+}
+#errors {
+  color: red;
 }
